[package]
name = "quicmux"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Backend-agnostic QUIC-ish multiplexed-stream abstraction over noq (quinn's multipath fork) and qmux (draft-ietf-quic-qmux, QUIC-over-TLS-over-TCP)."

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1", features = ["net", "rt", "sync", "time", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
sha2 = "0.10"
thiserror = "2.0.18"
log = "0.4"

# `noq` backend (quinn's multipath fork, UDP-based). Optional so a consumer
# that only wants the `qmux` backend (or only the backend-agnostic
# `race_with_stagger` combinator, which needs neither) doesn't have to pull
# it in.
noq = { version = "1.0.1", features = ["rustls", "ring"], optional = true }

# `qmux` backend (draft-ietf-quic-qmux, QUIC's stream API polyfilled over
# TLS-over-TCP) — pre-1.0, opt-in. crates.io's published qmux (0.3.1) predates
# real RFC 9221 datagram support, so this is pinned to the same commit
# `h3-qmux`/`isekai-link-masque` already pin to, to avoid an API mismatch
# between crates that must interoperate in the same dependency graph (this
# backend's own leg does not use datagrams, but staying on one commit avoids
# two different `qmux`/`web-transport-trait` versions coexisting).
qmux = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3", optional = true }
web-transport-trait = { git = "https://github.com/moq-dev/web-transport", rev = "f6107797d4a7301408964b22b6f3150967b95af3", optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true }

[features]
noq = ["dep:noq"]
qmux = ["dep:qmux", "dep:web-transport-trait", "dep:tokio-rustls"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
rcgen = "0.13"
