[package]
name = "quicsock-noq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "quicsock adapter for noq: a noq::AsyncUdpSocket that fans out across multiple network-interface-bound paths (e.g. Wi-Fi + tethering), for noq's QUIC multipath."
repository.workspace = true

[dependencies]
quicsock = { version = "0.1.0", path = "../quicsock" }
noq = "1.0"
tokio = { version = "1", features = ["net", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
netdev = "0.45"
