[package]
name = "russh-stream-session"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Establish and authenticate an SSH client session (built on russh) over any AsyncRead+AsyncWrite byte stream, with pluggable host-key verification and optional single-hop jump-host tunneling."
readme = "README.md"
keywords = ["ssh", "russh", "async", "tunnel"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-trait = "0.1.89"
russh = "0.48"
russh-keys = "0.48"
thiserror = "2.0.18"
tokio = { version = "1", features = ["io-util"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
# Only for the authenticate_with_signer test's FakeSigner, which needs to
# produce a real SSH signature blob (same versions russh-keys' own `ssh-key`
# dependency pins, so there's no risk of a duplicate/mismatched version in
# the dependency graph).
ssh-encoding = "0.2"
signature = "2"
rand = "0.8"
